<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="coming_soon">Coming soon</string>
    <string name="app_name">DreamTeen Fitness</string>
    <string name="app_name_splash">DreamTeen\nFitness</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_invite_friends">Friends</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_dashboard">Dashboard</string>
    <string name="action_leaderboard">Leaderboards</string>
    <string name="action_goals">Goals</string>
    <string name="aerobic">Aerobic</string>
    <string name="run_activity_title">Run</string>
    <string name="kg_test_value" translatable="false">8</string>
    <string name="track_exercise">Track Exercise</string>
    <string name="app_slogan">Make Fitness Better</string>
    <string name="login_button_label">Connect to Google Fit</string>
    <string name="calories_default_value">0</string>
    <string name="calories_burned">calories burned</string>
    <string name="pause_run_button_label">Pause</string>
    <string name="start">Start</string>
    <string name="duration_label">Duration</string>
    <string name="duration_default_value" translateble="false">00:00:00</string>
    <string name="duration_units">min</string>
    <string name="distance_label">Distance</string>
    <string name="distance_default_value">0.00</string>
    <string name="finish_run">Finish run</string>
    <string name="resume_run">Resume</string>
    <string name="start_run_button_label">Start Run</string>
    <string name="finish_trip_button_label">Slide to Finish</string>
    <string name="running_label">Running</string>
    <string name="pause_label">Paused</string>
    <string name="resume_run_button_label">Resume</string>
    <string name="title_activity_summary">Summary</string>
    <string name="run_was_label">Run was</string>
    <string name="notes_field_hint">Additional notes</string>
    <string name="save_run_button_label">Save Run</string>
    <string name="discard_button_label">Resume</string>
    <string name="discard_trip_dialog_title">Discard the trip?</string>
    <string name="discard_trip_dialog_message">You\'ll lose the data about it.</string>
    <string name="discard">Discard</string>
    <string name="action_share">Share</string>
    <string name="title_activity_friends">Friends</string>
    <string name="friends_title">Friends make fitness\nmore fun!</string>
    <string name="invite_button_label_fb">Find on Facebook</string>
    <string name="facebook_app_id">562228307244897</string>
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="title_facebook_login">Facebook login</string>
    <string name="network_error">Network error</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_units">Units</string>
    <string name="pref_distance_units_dialog_title">Measure units</string>
    <string name="pref_notifications">Push notifications</string>
    <string name="pref_keep_screen">Keep screen active</string>
    <string name="pref_calories">Track calories</string>
    <string name="pref_steps">Track steps</string>
    <string name="pref_notifications_summary">Get notifications about step goal progress</string>
    <string name="pref_keep_screen_summary">Turn ON to keep screen active during and activity</string>
    <string name="request_sent_toast">Request successfully sent</string>
    <string name="log_activity_label">Log workout</string>
    <string name="save_button_label">Save</string>
    <string name="aerobic_activity_title">Choose exercise</string>
    <string name="start_time_key" translatable="false">start_time</string>
    <string name="steps_default_value">0</string>
    <string name="steps_norm_hint">to goal</string>
    <string name="steps_target_default_value">2450</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_email">Recipients</string>
    <string name="email_send">Send</string>
    <string name="title_activity_workout">Training</string>
    <string name="title_activity_challenges">Challenges</string>
    <string name="title_activity_goals">Goals</string>
    <string name="app_id">326277129375</string>
    <string name="leaderboard_steps_taken">CgkIn8mHvb8JEAIQAA</string>
    <string name="leaderboard_miles_runned">CgkIn8mHvb8JEAIQAQ</string>
    <string name="action_chat">Chat with friends</string>
    <string name="action_music">Music</string>
    <string name="steps_icon_description">Steps counter icon</string>
    <string name="goal_not_set_hint">Goal not set</string>
    <string name="steps_today_label">steps today</string>
    <string name="steps_label">Step count</string>
    <string name="add_button_label">Add</string>
    <string name="run_duration_label">Run duration</string>
    <string name="calories_label">Calories burned</string>
    <string name="action_search">Search friends</string>
    <string name="title_activity_friends_add">Find friends</string>
    <string name="no_users">No other registered users yet.\nPlease wait for anybody to sign up.</string>
    <string name="no_friends">No added friends yet.\nPlease pick anybody from\nsearch screen.</string>
    <string name="title_activity_friends_list">My friends</string>
    <string name="action_my_friends">My Friends</string>
    <string name="title_activity_send_message">Send Message</string>

</resources>
