<LinearLayout
    style="@style/InputBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="bellamica.tech.dreamteenfitness.ui.activities.SummaryActivity">


    <LinearLayout
        style="@style/InputContainer">

        <TextView
            android:id="@+id/TripLabelHeader"
            style="@style/TripLabelHeader"
            android:text="@string/run_was_label"/>

        <TextView
            android:id="@+id/TripLabelDistance"
            style="@style/TripLabelDistance"
            android:text="@string/distance_default_value"/>

        <TextView
            android:id="@+id/TripLabelUnits"
            style="@style/TripLabelUnits"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/tripNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:maxLength="50"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <requestFocus/>

        <EditText
            android:id="@+id/tripNotesField"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/notes_field_hint"
            android:inputType="textFilter|textMultiLine|textNoSuggestions"
            android:maxLength="300"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/yellow_button_selector"
                android:onClick="saveRun"/>

            <TextView
                android:id="@+id/start_button_label"
                style="@style/ShadowOverlayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/save_run_button_label"
                android:textColor="@android:color/white"
                android:textSize="24sp"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/discardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_arrow_back"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:minHeight="40dp"
            android:text="@string/discard_button_label"
            android:textColor="#246dcc"
            android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>