<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              tools:context="sheyko.aleksey.mapthetrip.ui.activities.GoalsActivity"
              style="@style/GoalsActivityContainer">

    <LinearLayout
        android:id="@+id/stepsContainer"
        style="@style/GoalContainer">

        <LinearLayout
            style="@style/GoalContainerLayout">

            <TextView
                android:text="@string/steps_label"
                style="@style/GoalContainerHeader"/>

            <ProgressBar
                android:id="@+id/progressBarDailySteps"
                android:progressDrawable="@drawable/pb_steps"
                style="@style/GoalProgressBar"/>

            <TextView
                android:id="@+id/stepsNotSetLabel"
                style="@style/GoalNotSetLabel"/>

        </LinearLayout>

            <Button
                android:id="@+id/setStepsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:paddingLeft="12dp"
                android:background="@drawable/set_goal_button_purple"
                android:fontFamily="sans-serif-bold"
                android:paddingRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:onClick="addChallengeGoal"
                android:text="@string/add_button_label"
                />

    </LinearLayout>

    <!-- Set goal container-->
    <LinearLayout
        android:id="@+id/durationContainer"
        style="@style/GoalContainer">

        <LinearLayout
            style="@style/GoalContainerLayout">

            <TextView
                android:text="@string/run_duration_label"
                style="@style/GoalContainerHeader"/>

            <ProgressBar
                android:id="@+id/progressBarWeeklyDuration"
                style="@style/GoalProgressBar"
                android:progressDrawable="@drawable/pb_duration"/>

            <TextView
                android:id="@+id/durationNotSetLabel"
                style="@style/GoalNotSetLabel"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp">

            <Button
                android:id="@+id/setDurationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:paddingLeft="12dp"
                android:background="@drawable/set_goal_button"
                android:fontFamily="sans-serif-bold"
                android:paddingRight="12dp"
                android:onClick="addChallengeGoal"
                android:text="@string/add_button_label"/>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>